# colcon-nano-ros

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: test-build.yml  wheels.yml
build-tools/colcon-cargo-ros2/colcon_cargo_ros2/: workspace_bindgen.py
build-tools/colcon-cargo-ros2/colcon_cargo_ros2/package_augmentation/: __init__.py
build-tools/colcon-cargo-ros2/test/: test_build.py
build-tools/rosidl-bindgen/src/: embedded.rs
cargo-ros2-py/: Cargo.toml  README.md  pyproject.toml
cargo-ros2/src/: lib.rs
colcon-cargo-ros2/colcon_cargo_ros2/: workspace_bindgen.py
testing_workspaces/my_robot_node/: Cargo.toml
user-libs/: Cargo.toml
user-libs/rclrs/: Cargo.toml
user-libs/rosidl-runtime/: Cargo.toml
