[package]
name = "cargo-ros2-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for cargo-ros2"

[lib]
name = "cargo_ros2_py"
crate-type = ["cdylib"]  # Dynamic library for Python

[dependencies]
pyo3.workspace = true
cargo-ros2.workspace = true

[build-dependencies]
pyo3-build-config = "0.22"
