[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "cargo-ros2-py"
version = "0.1.0"
description = "Python bindings for cargo-ros2 - Unified build tool for ROS 2 Rust projects"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "cargo-ros2 contributors" }
]
keywords = ["ros2", "rust", "robotics", "build-tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/rosrust/colcon-cargo-ros2"
Repository = "https://github.com/rosrust/colcon-cargo-ros2"
"Bug Tracker" = "https://github.com/rosrust/colcon-cargo-ros2/issues"

[tool.maturin]
# PyO3 bindings to create Python extension module
bindings = "pyo3"
# Path to Cargo.toml for this wrapper
manifest-path = "Cargo.toml"
# Strip symbols to reduce size
strip = true
# Module name
module-name = "cargo_ros2_py"
